--- a/src/index.css
+++ b/src/index.css
@@ -255,15 +255,9 @@ ul {
 
 /* ============= PROJECT CSS =============== */
 
-/* optional overwrite */
-
 body {
   background: var(--primary-100);
 }
-
-/* * {
-  border: 2px solid red;
-} */
 
 main {
   min-height: 100vh;
@@ -271,8 +265,8 @@ main {
   justify-content: center;
   align-items: center;
 }
+
 .container {
-  /* border: 2px solid red; */
   width: 90vw;
   max-width: var(--fixed-width);
   margin: 5rem 0;
@@ -280,27 +274,32 @@ main {
   border-radius: var(--borderRadius);
   padding: 1.5rem 2rem;
   box-shadow: var(--shadow-1);
+
+  h3 {
+    margin-bottom: 2rem;
+  }
 }
-.container h3 {
-  margin-bottom: 2rem;
-}
+
 .person {
   display: grid;
   grid-template-columns: auto 1fr;
-  column-gap: 0.75rem;
+  gap: 0.75rem;
   margin-bottom: 1.5rem;
   align-items: center;
-}
-.person img {
-  width: 75px;
-  height: 75px;
-  border-radius: 50%;
-  box-shadow: var(--shadow-3);
-}
-.person h4 {
-  font-weight: 500;
-  margin-bottom: 0.5rem;
-}
-.person p {
-  color: var(--grey-500);
+
+  img {
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+    box-shadow: var(--shadow-3);
+  }
+
+  h4 {
+    font-weight: 500;
+    margin-bottom: 0.5rem;
+  }
+
+  p {
+    color: var(--grey-500);
+  }
 }
