Change color palette

--- a/src/index.css
+++ b/src/index.css
@@ -14,15 +14,15 @@ html {
 
 :root {
   /* colors */
-  --primary-100: #fae8ff;
-  --primary-200: #f5d0fe;
-  --primary-300: #f0abfc;
-  --primary-400: #e879f9;
-  --primary-500: #d946ef;
-  --primary-600: #c026d3;
-  --primary-700: #a21caf;
-  --primary-800: #86198f;
-  --primary-900: #701a75;
+  --primary-100: #dae6f0;
+  --primary-200: #b5cde1;
+  --primary-300: #90b4d2;
+  --primary-400: #6b9bc3;
+  --primary-500: #4682b4;
+  --primary-600: #386890;
+  --primary-700: #2a4e6c;
+  --primary-800: #1c3448;
+  --primary-900: #0e1a24;
 
   /* grey */
   --grey-50: #f8fafc;
